# Fair_VPR_ala_Yandex

./: CMakeLists.txt  LICENSE  README.md  SPB_calculation.py  generated_problem.json  generated_solution.json  main.cpp  map_results.html  run.sh
src/: branch_and_bound.cpp  branch_and_bound.hpp  first_step.cpp  first_step.hpp  multi_agent_solver.cpp  multi_agent_solver.hpp  single_agent_solver.cpp  single_agent_solver.hpp
tests/: CMakeLists.txt  test_branch_and_bound.cpp  test_first_step.cpp  test_json.cpp
tests/data/: first_step_problem_1.json  first_step_problem_2.json  mysolution.json  problem.json  solution.json
utils/: json_parser.cpp  json_parser.hpp  problem_arguments.cpp  problem_arguments.hpp
vrp_problems/: 12.json  13.json  14.json  15.json  16.json  17.json
